added list inside js

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </head>
   <body>
     <div id="app">
-      <h1>{{ message }}</h1>
+      <h1>{{ list[0].text }}</h1>
     </div>
   </body>
 </html>
