--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
   </head>
   <body>
     <div id="app">
-      <h1>{{ list[0].text }}</h1>
+      <ul>
+        <li v-for="(text, index) in list">{{ list[index].text }}</li>
+      </ul>
     </div>
   </body>
 </html>
