--- a/index.html
+++ b/index.html
@@ -39,12 +39,24 @@
   </head>
   <body>
     <div id="app">
-      <ul v-for="(text, index) in list">
-        <li v-if="list[index].done" class="text-decoration-line-through">
-          {{ list[index].text }}
-        </li>
-        <li v-else="!list[index].done">{{ list[index].text }}</li>
-      </ul>
+      <div class="container">
+        <div class="text-center">
+          <h1>To do list</h1>
+        </div>
+        <div>
+          <ul v-for="(text, index) in list" class="todo-list">
+            <li
+              v-if="list[index].done"
+              class="todo-element text-decoration-line-through"
+            >
+              {{ list[index].text }}
+            </li>
+            <li v-else="!list[index].done" class="todo-element">
+              {{ list[index].text }}
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
   </body>
 </html>
