--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
               class="todo-element text-decoration-line-through"
             >
               {{ list[index].text }}
-              <div class="erase-btn clearfix">
+              <div @click="remove(index)" class="erase-btn clearfix">
                 <i class="fa-solid fa-circle-xmark"></i>
               </div>
             </li>
             <li v-else="!list[index].done" class="todo-element">
               {{ list[index].text }}
-              <div class="erase-btn clearfix">
+              <div @click="remove(index)" class="erase-btn clearfix">
                 <i class="fa-solid fa-circle-xmark"></i>
               </div>
             </li>
