Problem with Milestone 3, trying solutions

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 
         <div class="input-group mb-3">
           <input
-            v-model="newElement.text"
+            v-model.trim="inputMessage"
             type="text"
             class="form-control"
-            :placeholder="inputMessage"
+            :placeholder="placeHolderMessage"
             aria-label="Recipient's username"
             aria-describedby="basic-addon2"
           />
