Bonus 1, added keyup.enter on input

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <div class="input-group mb-3">
           <input
             v-model.trim="inputMessage"
+            @keyup.enter="addTodo()"
             type="text"
             class="form-control"
             :placeholder="placeHolderMessage"
